projetos/local/nexus-campaign-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nexus-campaign-api
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: nexus-campaign-api
        image: ghcr.io/synapsehealthtech/nexus-campaign-api:v1.0.0
        imagePullPolicy: IfNotPresent
        # resources: OMITIDO INTENCIONALMENTE — K3D local
      - name: nexus-campaign-worker
        image: ghcr.io/synapsehealthtech/nexus-campaign-api:v1.0.0
        imagePullPolicy: IfNotPresent
        # resources: OMITIDO INTENCIONALMENTE — K3D local
